Big refactor
Cleaned up Edit Node Panel UX
Fixed ConnectionEditTool
- works with undo better
- resets values when connection is removed
- allows user to cancel making a connection more easily
- prevents several Exceptions